--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 
 1. Clonar repositorio
 2. crear un .env basado en el .env.example
+3. ejecutar el comando `git submodule update --init --recursive` para actualixar los submodulos
 3. Ejecutar el comando `docker compose up --build`
 
 ### Pasos para crear los Git Submodules
